@@ -2,6 +2,7 @@
 -------------------------------------------------------------------------
 * Finally fixed battery calculations, it missed Power so left time was
     always at zero.
+* Fixed task window raising on drop file on it (was broken since 0.9.0).
 
 0.9.2
 -------------------------------------------------------------------------
